<resources>
    <string name="app_name">ErgoDigital</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_postural_evaluation">Avaliação Postural</string>

    <string name="textBtnCH">Movimentação de Cargas</string>
    <string name="textBtnPA">Avaliação Postural</string>
    <string name="textBtnRM">Movimento Repetitivo</string>
    <string name="textTitle">Types of Ergonomic Evaluation</string>



    <string name="PEA_title">Tools</string>
    <string name="PEA_btn_owas">System OWAS</string>
    <string name="title_activity_system_owas">System OWAS</string>
    <string name="PEA_btn_rula">System RULA</string>

    <string-array name="OWAStorso">
        <item>1-Reto</item>
        <item>2-Inclinado</item>
        <item>3-Reto e Torcido</item>
        <item>4-Inclinado e Torcido</item>
    </string-array>

    <string-array name="OWASbracos">
        <item>1-Dois braços para baixo</item>
        <item>2-Um braço para cima</item>
        <item>3-Dois braços para cima</item>
    </string-array>

    <string-array name="OWASpernas">
        <item>1-Duas pernas retas</item>
        <item>2-Uma perna reta</item>
        <item>3-Duas pernas flexionadas</item>
        <item>4-Uma perna flexionada</item>
        <item>5-Uma perna ajoelhada</item>
        <item>6-Deslocamento com pernas</item>
        <item>7-Duas pernas suspensas</item>
    </string-array>

    <string-array name="OWASforca">
        <item>10Kg ou + </item>
        <item>+10Kg &lt; 20kg </item>
        <item>+20Kg</item>
    </string-array>


    <string-array name="RULAbraco">
        <item>1 +20º a -20º</item>
        <item>2 -20º em ext.</item>
        <item>3 20º a 45º</item>
        <item>4 45º a 90º</item>
        <item>5 >90º</item>
    </string-array>
    <string-array name="RULAbraco_Correcao">
        <item>1 Nada</item>
        <item>2 Ombro levantado ou abdução</item>
        <item>3 Apoiado</item>
    </string-array>

    <string-array name="RULAantebraco">
        <item>1 60º a 100º</item>
        <item>2 0-60º</item>
        <item>3 >100º</item>

    </string-array>

    <string-array name="RULApunho">
        <item>1 0º</item>
        <item>2 +15º a -15º</item>
        <item>3 >+15º o &lt;-15º</item>
    </string-array>


    <string name="title_activity_system_rula">System RULA</string>

</resources>
